# fussion

./: .gitignore  .readthedocs.yml  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: plot.py  run.py
docs/: api.rst  conf.py  index.rst  installation.rst  usage.rst
examples/: bridge_quickstart.py  code_to_text.py  fusion_quickstart.py  generate.py
src/fussion/: __init__.py  __main__.py  bridge.py  cli.py  datasets.py  encoders.py  exceptions.py  fusion.py  merger.py
tests/: test_bridge.py  test_datasets.py  test_edge_cases.py  test_encoders.py  test_fusion.py  test_merger.py
