[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fussion"
version = "0.1.0"
description = "Cross-modal fusion: connect any encoder to any frozen LLM"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Griffith-7" }]
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "transformers>=4.30",
    "pillow",
    "numpy",
]

[project.scripts]
fussion = "fussion.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["fussion*"]
